* New: Lists all Raid/Party members Health and Mana/Power/Energy.
* New: Lists KBM versions for each Raid/Party member (if available.)
* New: Lists Soul Vitality for each Raid/Party member.
* New: Lists Current and Max Planar charges for each Raid/Party member.
* New: Option to disable/enable the display in the options window.
* New: Toggle the display via the slash command /kbmreadycheck.

Tank-Swap
* Fixed: Very rare case where Debuff.remaining could return nil. (Generally due to lag)

Rez Master
* Fixed: Actually applied the fix correctly from the last Revision this time.

Master Mode Caduceus Rise
* Ashcaller Zael
** Fixed: Stopped the smaller Adds from overwriting the bosses UID, enabling the encounter to finally trigger a victory.

Chronicles
* Fixed: Disabled Chronicles will no longer partially initialize, and will instead be completely ignored.

----
v1.2.2

Castbars
* Change: All Boss castbars now inherit the global Style setting (KBM or Rift).

Colors
* New: Added Pink to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* New: Added Dark Grey to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* Change: Purple is now... more purple.

Chat Output
* New: Chat Objects have been added to KBM. These are created and managed in the same way as Alerts, Timers and Mechanic Spies.
* New: Newly created and converted Chat Object will have various settings, so they can be individually enabled/disabled.
* New: Chat Objects have a Color option, this is not yet available, but once available all settings will be automatically applied.
* Note: This system will be expanded upon, and will include options in the global menu to assign which Tabs KBM output can display to.
* Note: Once the Chat Tab options are available, custom and default colors already defined will be applied.

Rez Master
* New: If the Unit cache does not have an entry yet for the player in question, KBM will temporarily assign one.